--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -721,13 +721,16 @@
 		margin-left: 375px;
 
 		> section {
+			min-height:100vh;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
 			margin: 0;
-			overflow: hidden;
+			overflow: visible;
 			padding: 4em 0;
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 			text-align: center;
 			background-image: url('../images/overlay.png');
-
 			&.dark {
 				color: #ddd;
 				color: rgba(255, 255, 255, 0.75);
@@ -750,6 +753,8 @@
 					}
 				}
 			}
+
+			
 
 			&.cover {
 				padding: 10em 0;
