--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -185,11 +185,8 @@ $main-blue: #A4D9D6;
 		color: inherit;
 		@include vendor('transition', ('color 0.35s ease-in-out', 'border-bottom-color 0.35s ease-in-out'));
 		outline: 0;
-
-		&:hover {
-			color: #E27689;
-		}
 	}
+	
 
 	sub {
 		position: relative;
@@ -238,6 +235,16 @@ $main-blue: #A4D9D6;
 	}
 	.highlight-blue{
 		background-color: $main-blue
+	}
+
+	.socialLinks{
+		a{
+			font-size:2rem;
+			color: $main-red;
+			&:hover {
+				color: $main-blue;
+			}
+		}
 	}
 
 /* Container */
@@ -697,36 +704,6 @@ $main-blue: #A4D9D6;
 		}
 	}
 
-/* Footer */
-
-	#footer {
-		margin-left: 375px;
-		text-align: center;
-		background-color: #dce3e2;
-		padding: 3em 0 4em 0;
-		box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
-		font-size: 0.8em;
-
-		.copyright {
-			cursor: default;
-			margin: 0;
-
-			li {
-				display: inline-block;
-				line-height: 1em;
-				border-left: solid 1px rgba(128, 128, 128, 0.35);
-				padding: 0 0 0 0.5em;
-				margin: 0 0 0 0.5em;
-
-				&:first-child {
-					border-left: 0;
-					padding-left: 0;
-					margin-left: 0;
-				}
-			}
-		}
-	}
-
 /* Main */
 
 	#main {
@@ -1140,23 +1117,4 @@ $main-blue: #A4D9D6;
 					}
 				}
 			}
-
-		/* Footer */
-
-			#footer {
-				.copyright {
-					li {
-						display: block;
-						line-height: 1.25em;
-						border: 0;
-						padding: 0;
-						margin: 1em 0 0 0;
-
-						&:first-child {
-							margin-top: 0;
-						}
-					}
-				}
-			}
-
-	}
+		}
