--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -218,14 +218,6 @@ $main-white: #FBF4E8;
 		color:$main-red;
 	}
 
-	.text-highlight{
-		background-color: #f3db55;
-
-	}
-	.highlight-blue{
-		background-color: $main-blue
-	}
-
 	.socialLinks{
 		a{
 			font-size:2rem;
@@ -240,17 +232,9 @@ $main-white: #FBF4E8;
 
 	.container {
 		margin: 0 auto;
-		max-width: 100%;
-		width: 1400px;
-
-
-		@include breakpoint('wide') {
-			width: 1200px;
-		}
-
-		@include breakpoint('normal') {
-			width: 960px;
-		}
+		width: 100%;
+		max-width:2000px;
+		padding: 0 5%;		
 
 		@include breakpoint('narrow') {
 			width: 100%;
@@ -265,95 +249,6 @@ $main-white: #FBF4E8;
 		}
 	}
 
-/* Row */
-
-	.row {
-		@include html-grid((40px, 40px));
-
-		@include breakpoint('wide') {
-			@include html-grid((40px, 40px), 'wide');
-		}
-
-		@include breakpoint('normal') {
-			@include html-grid((40px, 40px), 'normal');
-		}
-
-		@include breakpoint('narrow') {
-			@include html-grid((20px, 20px), 'narrow');
-		}
-
-		@include breakpoint('<=narrower') {
-			@include html-grid((20px, 20px), 'narrower');
-		}
-
-		@include breakpoint('<=mobile') {
-			@include html-grid((20px, 20px), 'mobile');
-		}
-	}
-
-/* Sections/Article */
-
-	section, article {
-		margin-bottom: 3em;
-
-		> :last-child,
-		> .container,
-		&:last-child {
-			margin-bottom: 0;
-		}
-
-		.row > & {
-			margin-bottom: 0;
-		}
-	}
-
-/* Image */
-
-	.image {
-		display: inline-block;
-		border: 0;
-
-		img {
-			display: block;
-			width: 100%;
-		}
-
-		&.avatar48 {
-			width: 48px;
-			height: 48px;
-
-			img {
-				width: 48px;
-				height: 48px;
-			}
-		}
-
-		&.fit {
-			display: block;
-			width: 100%;
-		}
-
-		&.featured {
-			display: block;
-			width: 100%;
-			margin: 0 0 2em 0;
-		}
-
-		&.left {
-			float: left;
-			margin: 0 2em 2em 0;
-		}
-
-		&.centered {
-			display: block;
-			margin: 0 0 2em 0;
-
-			img {
-				margin: 0 auto;
-				width: auto;
-			}
-		}
-	}
 
 /* Icons */
 
@@ -376,73 +271,6 @@ $main-white: #FBF4E8;
 			border: 0;
 		}
 	}
-
-/* Form */
-
-	form {
-		label {
-			display: block;
-			text-align: left;
-			margin-bottom: 0.5em;
-		}
-
-		input[type="text"],
-		input[type="email"],
-		input[type="password"],
-		select,
-		textarea {
-			position: relative;
-			-webkit-appearance: none;
-			display: block;
-			border: 0;
-			outline: 0;
-			background: #fff;
-			background: rgba(255, 255, 255, 0.75);
-			width: 100%;
-			border-radius: 0.35em;
-			padding: 0.75em 1em 0.75em 1em;
-			box-shadow: inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.05);
-			border: solid 1px rgba(0, 0, 0, 0.15);
-			@include vendor('transition', 'all 0.35s ease-in-out');
-
-			&:focus {
-				box-shadow: 0 0 2px 1px #8ebebc;
-				background: #fff;
-			}
-		}
-
-		input[type="text"],
-		input[type="email"],
-		input[type="password"],
-		select {
-			line-height: 1.25em;
-		}
-
-		textarea {
-			min-height: 14em;
-		}
-
-		::-webkit-input-placeholder {
-			color: #555 !important;
-		}
-
-		:-moz-placeholder {
-			color: #555 !important;
-		}
-
-		::-moz-placeholder {
-			color: #555 !important;
-		}
-
-		:-ms-input-placeholder {
-			color: #555 !important;
-		}
-
-		::-moz-focus-inner {
-			border: 0;
-		}
-	}
-
 /* Icons */
 
 	.icon {
