--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -1,3 +1,8 @@
+/*
+	Prologue by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+*/
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
@@ -6,22 +11,13 @@
 @import url("font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600");
 
-
 //colors:
 $main-red: #E25A53;
 $main-orange: #FD835D;
 $main-blue: #A4D9D6;
 $main-white: #FBF4E8;
 
-
-/*
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
-
 // Breakpoints.
-
 	@include breakpoints((
 		wide:      ( 961px,  1880px ),
 		normal:    ( 961px,  1620px ),
@@ -458,7 +454,7 @@ $main-white: #FBF4E8;
 					}
 				}
 			}
-			&.intro {
+			&.intro, &#about {
 				background-image: linear-gradient(145deg, $main-white 45.29%, $main-blue 45.29%, $main-blue 47.46%, $main-orange 47.46%, $main-orange 50%, $main-white 50%, $main-white 95.29%, $main-blue 95.29%, $main-blue 97.46%, $main-orange 97.46%, $main-orange 100%);
 				background-size: 481.19px 336.93px;
 			}
@@ -475,7 +471,7 @@ $main-white: #FBF4E8;
 				background-color: #89bdbb;
 			}
 		}
-		#top{
+		#top, #about{
 			justify-content: center;
 		}
 	}
